sumo/tests/jtrrouter/errors/network/junction/shape/testsuite.jtrrouter
root__edge__junction__shape__empty1
root__edge__junction__shape__empty2

root__edge__junction__shape__false1a
root__edge__junction__shape__false2a

root__edge__junction__shape__false1b
root__edge__junction__shape__false2b

root__edge__junction__shape__false1c
root__edge__junction__shape__false2c

root__edge__junction__shape__false1d
root__edge__junction__shape__false2d

root__edge__junction__shape__false1e
root__edge__junction__shape__false2e

